syntax = "proto3";

package flagsheet.v1;

option go_package = "github.com/stillmatic/flagsheet/gen/flagsheet/v1;flagsheetv1";

message EvaluateRequest {
    string feature = 1;
    string entity_id = 2;
}

message EvaluateResponse {
    string variant = 1;
}

service FlagSheetService {
    rpc Evaluate(EvaluateRequest) returns (EvaluateResponse);
}
